--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,9 @@ typings/
 .nuxt
 dist
 
+# Build directory
+build/
+
 # Gatsby files
 .cache/
 # Comment in the public line in if your project uses Gatsby and *not* Next.js
@@ -102,3 +105,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+# IntelliJ
+.idea
+*.iml
