--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ jobs:
               skip_cleanup: true
               github_token: $GITHUB_TOKEN # Set in the settings page of your repository, as a secure variable
               keep_history: true
-              local_dir: /root/app/build/
+              local_dir: build/
               on:
                   branch: master
