Moved travis-ci specific code to travis-ci.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,24 +3,19 @@ language: bash
 services:
     - docker
 
-env:
-    - GIT_PULL_REQUEST=$TRAVIS_PULL_REQUEST
-    - GIT_BRANCH=$TRAVIS_BRANCH
-    - WORK_DIR=$TRAVIS_BUILD_DIR
-
 jobs:
     include:
         - stage: 'Tests'
           name: 'Unit Tests'
           cache: cov
-          script: ./ci.sh test
-        - script: ./ci.sh analyse
+          script: ./travis-ci.sh test
+        - script: ./travis-ci.sh analyse
           name: 'Analyse'
         - stage: Build
-          script: ./ci.sh build
+          script: ./travis-ci.sh build
           if: branch != master
         - stage: Build & Deploy
-          script: ./ci.sh build
+          script: ./travis-ci.sh build
           if: branch = master
           deploy:
               provider: pages
