Remove nested sections in build log

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-commit": "pretty-quick --staged && yarn lint && yarn test-ci --coverage"
+            "pre-commit": "pretty-quick --staged && yarn lint && yarn test-ci"
         }
     }
 }
