--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "homepage": "./",
     "dependencies": {
         "@material-ui/core": "^4.9.5",
+        "@material-ui/lab": "^4.0.0-alpha.56",
         "@types/node": "^12.7.4",
         "@types/react": "^16.9.24",
         "@types/react-dom": "^16.9.5",
@@ -13,7 +14,6 @@
         "react": "^16.9.0",
         "react-copy-to-clipboard": "^5.0.1",
         "react-dom": "^16.9.0",
-        "react-toastify": "^5.5.0",
         "typescript": "^3.6.2"
     },
     "scripts": {
