Specify apt packages for Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,12 @@ language: bash
 
 services:
     - docker
-    - pass
+
+addons:
+    apt:
+        packages:
+            - docker-ce
+            - pass
 
 jobs:
     include:
