--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react-dom": "^16.9.5",
         "acorn": "^7.1.1",
         "audit-ci": "^2.5.1",
+        "immer": "^8.0.1",
         "react": "^16.9.0",
         "react-copy-to-clipboard": "^5.0.1",
         "react-dom": "^16.9.0",
