--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "@types/react": "^16.9.24",
         "@types/react-dom": "^16.9.5",
         "acorn": "^7.1.1",
-        "audit-ci": "^2.5.1",
+        "audit-ci": "^4.1.0",
         "immer": "^8.0.1",
         "react": "^16.9.0",
         "react-copy-to-clipboard": "^5.0.1",
@@ -46,8 +46,11 @@
         ]
     },
     "resolutions": {
-        "yargs-parser": "^13.1.2",
-        "immer": "^8.0.1"
+        "trim-newlines": "^4.0.1",
+        "css-what": "^5.0.1",
+        "normalize-url": "^4.5.1",
+        "browserslist": "^4.16.6",
+        "glob-parent": "^5.1.2"
     },
     "jest": {
         "collectCoverageFrom": [
