--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react-dom": "^16.9.5",
         "acorn": "^7.1.1",
         "audit-ci": "^4.1.0",
+        "browserslist": "^4.16.6",
         "immer": "^8.0.1",
         "react": "^16.9.0",
         "react-copy-to-clipboard": "^5.0.1",
@@ -46,11 +47,10 @@
         ]
     },
     "resolutions": {
-        "trim-newlines": "^4.0.1",
-        "css-what": "^5.0.1",
-        "normalize-url": "^4.5.1",
         "browserslist": "^4.16.6",
-        "glob-parent": "^5.1.2"
+        "glob-parent": "^5.1.2",
+        "tar": "^6.1.1",
+        "trim-newlines": "^4.0.1"
     },
     "jest": {
         "collectCoverageFrom": [
